[project]
name = "hilsim-3"
version = "0.1.0"
description = "Real-time simulation system with RTT analysis"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
analyze-rtt = "analyze_rtt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "logs/",
    ".venv/",
    "*.pyc",
    "__pycache__/",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]